Attempt fix for font size not fitting when large number of users

--- a/main.css
+++ b/main.css
@@ -110,7 +110,7 @@ h2,
 
     h2,
     .github h2 a {
-        font-size: 5.4vw;
+        font-size: 5vw;
     }
 }
 
